--- a/Donate4Palestine.html
+++ b/Donate4Palestine.html
@@ -74,12 +74,17 @@
             </div>
         </div>
     </section>
-    <section>
-        <div>
-
-        </div>
-        <div>
-
+    <section id="fourth_section">
+        <div class="digital_donation">
+            <div>
+                <a href="https://www.soscisurvey.de/help/doku.php/en:create:random_questionnaire"><img
+                        src="Image/empty_bin.jpg" alt=""></a>
+            </div>
+            <img src="Image/left-arrow-1840340-1559694.jpg" alt="">
+            <div id="text">
+                <h1>Digital Donation</h1>
+                <h2>Click the empty bin and complete the given survey, we will fill the empty bin for you</h2>
+            </div>
         </div>
     </section>
     <section id="fifth_section">
